# gphotos-uploader-rs

./: Cargo.toml  README.md  config.yml
_old/oauth2ns/: mod.rs
_old/photoslib_test/src/: main.rs
photoslib_test/: Cargo.toml
src/: config.rs  main.rs  tokensource.rs
src/photoslib/: batchCreateMedia.rs  callbuilders.rs  hub.rs  media_item.rs  mod.rs  scope.rs  types.rs
src/photoslib/_gen/: _gen.rs
