cargo-features = ["default-run"]

[package]
name = "gphotos-uploader"
version = "0.1.0"
authors = ["nmrshll <marshall.nicolas@gmail.com>"]
edition = "2018"
default-run = "gphotos-uploader"


[dependencies]
serde_derive = "1.0.87"
serde_yaml = "0.8.8"
serde = "1.0.87"
webbrowser = "0.4.0"
base64 = "0.10.1"
oauth2 = "1.3.0"
rand = "0.6.5"
url = "1.7.2"
oauth2_noserver = "0.1.0"

